# chip-8-emulator-vala

./: Makefile  README.md  com.github.avojak.chip-8.yml  meson.build  run
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flatpak.yml
data/: com.github.avojak.chip-8.appdata.xml.in.in  com.github.avojak.chip-8.gschema.xml.in  meson.build
po/extra/: POTFILES
src/: ActionManager.vala  Application.vala  MainLayout.vala  MainWindow.vala  Settings.vala  meson.build
src/Emulator/: Emulator.vala
src/Emulator/Audio/: APU.vala
src/Emulator/Graphics/: Display.vala  PPU.vala
src/Emulator/IO/: Keypad.vala
src/Emulator/Memory/: MMU.vala
src/Emulator/Processor/: CPU.vala  Registers.vala
src/Utils/: BitUtils.vala
src/Views/: WelcomeView.vala
src/Widgets/: ControlsDialog.vala  HeaderBar.vala  PreferencesDialog.vala  RomButton.vala
